--- a/style.css
+++ b/style.css
@@ -89,3 +89,14 @@ h1 a
     font-weight: bold;
     font-size: 50px;
 }
+#score
+{
+    color : rgba(255, 145, 0, 0.979);
+    text-shadow: 2px 2px black;
+    font-weight: bold;
+    font-size: 50px;
+}
+#score-count
+{
+    font-size: 22px;
+}
