--- a/signup.css
+++ b/signup.css
@@ -49,6 +49,7 @@ body
     background-color: #fff;
     color: black;
     font-family: "Barlow Condensed", arial, helvetica;
+    transition: all 0.5s ease-out;
     font-size: 200%;
     border-radius: 50px;
     width: 40%;
@@ -63,6 +64,11 @@ body
     border-radius: 50px;
     width: 40%;
 }
+#trial:focus
+{
+    border-color: aquamarine;
+    background-color: #021d20;
+}
 #account_already_on
 {
     margin-top: 5%;
@@ -70,6 +76,7 @@ body
     background-color: #fff;
     color: black;
     font-family: "Barlow Condensed", arial, helvetica;
+    transition: all 0.5s ease-out;
     font-size: 200%;
     border-radius: 50px;
     width: 40%;
@@ -83,4 +90,9 @@ body
     font-size: 200%;
     border-radius: 50px;
     width: 40%;
+}
+#account_already_on:focus
+{
+    border-color: aquamarine;
+    background-color: #021d20;
 }
