--- a/play.css
+++ b/play.css
@@ -7,45 +7,35 @@ body
 }
 img
 {
-    font-family: "Barlow Condensed",arial, helvetica;
-    font-size: 500%;
-    margin-top: 0;
-    width: 25%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    width: 30%;
+}
+.container
+{
+    display: inline-grid;
+    grid-template-columns: 50% auto;
+    color : #fff;
+    text-shadow: 2px 2px black;
+    font-weight: bold;
+    font-size: 150%;
+}
+#life
+{
+    color : rgba(57, 151, 70, 0.979);
+}
+#score
+{
+    color: gold;
 }
 #textarea-player
 {
     margin: auto;
     max-width: fit-content;
 }
-#playername #playedclubs
-{
-    font-weight: bold;
-    margin-top: 10%;
-}
-#PageRegles #PageAPropos
-{
-    color: azure;
-    margin-top: 5%;
-    font-size: 300%;
-}
 #title
 {
     margin-top: 2%;
-}
-button
-{
-    border-color: aquamarine;
-    background-color: #021d20;
-    color: black;
-    font-family: "Barlow Condensed", arial, helvetica;
-}
-button:hover 
-{
-    border-color: aquamarine;
-    background-color: #021d20;
-    color: white;
-    font-family: "Barlow Condensed", arial, helvetica;
-    
 }
 #clubs h2
 {
@@ -66,56 +56,137 @@ button:hover
     font-style: italic;
     color: #fff;
 }
-#enterthename
+#textarea-player
 {
     margin-top: 1%;
+    background-color : #fff;
+    border-radius: 20px;
+    width: 75%;
+    font-size: 150%;
+    color: rgb(174, 0, 255);
+    text-align: center;
+    font-weight: bold;
+    font-style: italic;
+    margin-bottom: 10%;
 }
 button
 {
     margin-top: 2%;
     border-radius: 20px;
-    width: 50%;
-    height: 20%;
+    width: 60%;
+    height: 10%;
     background-color:#fff;
     color: rgb(97, 97, 97);
-    font-family: "Barlow Condensed", arial, Arial, Helvetica;
     font-size : 200%;
     align-items: center;
+    transition: all 0.5s ease-out;
+}
+button:hover 
+{
+    border-color: aquamarine;
+    background-color: #021d20;
+    color: #fff;
+}
+button:focus
+{
+    border-color: aquamarine;
+    background-color: #021d20;
+}
+#myBtn
+{
+    margin-top: 2%;
+    border-radius: 20px;
+    width: 60%;
+    height: 10%;
+    background-color:#fff;
+    color: rgb(97, 97, 97);
+    font-size : 200%;
+    align-items: center;
+    transition: all 0.5s ease-out;
+}
+#myBtn:hover 
+{
+    border-color: rgb(124, 175, 158);
+    background-color: #04a165;
+    color: #fff;
+}
+#myBtn:focus
+{
+    border-color: rgb(124, 175, 158);
+    background-color: #04a165;
+}
+#myBtn2
+{
+    margin-top: 2%;
+    border-radius: 20px;
+    width: 60%;
+    height: 10%;
+    background-color:#fff;
+    color: rgb(97, 97, 97);
+    font-size : 200%;
+    align-items: center;
+    transition: all 0.5s ease-out;
+}
+#myBtn2:hover 
+{
+    border-color: rgb(226, 132, 55);
+    background-color: #f74a16;
+    color: #fff;
+}
+#myBtn2:focus
+{
+    border-color: rgb(226, 132, 55);
+    background-color: #f74a16;
+}
+#myBtn3
+{
+    margin-top: 2%;
+    border-radius: 20px;
+    width: 60%;
+    height: 10%;
+    background-color:#fff;
+    color: rgb(97, 97, 97);
+    font-size : 200%;
+    align-items: center;
+    transition: all 0.5s ease-out;
+}
+#myBtn3:hover 
+{
+    border-color: rgb(131, 167, 49);
+    background-color: #f8fc2f;
+    color: #000;
+}
+#myBtn3:focus
+{
+    border-color: rgb(131, 167, 49);
+    background-color: #f8fc2f;
+}
+#myBtn4
+{
+    margin-top: 2%;
+    border-radius: 20px;
+    width: 60%;
+    height: 10%;
+    background-color:#fff;
+    color: rgb(97, 97, 97);
+    font-size : 200%;
+    align-items: center;
+    transition: all 0.5s ease-out;
+}
+#myBtn4:hover 
+{
+    border-color: rgb(203, 174, 250);
+    background-color: #9703fa;
+    color: #fff;
+}
+#myBtn4:focus
+{
+    border-color: rgb(203, 174, 250);
+    background-color: #9703fa;
 }
 h1 a
 {
     color:rgb(0, 0, 0);
-}
-#heart-points
-{
-    margin-top: 1%;
-    font-size: 175%;
-}
-#life
-{
-    color : rgba(57, 151, 70, 0.979);
-    text-shadow: 2px 2px black;
-    font-weight: bold;
-    font-size: 50px;
-}
-#score
-{
-    color : rgba(255, 145, 0, 0.979);
-    text-shadow: 2px 2px black;
-    font-weight: bold;
-    font-size: 50px;
-}
-#score-count
-{
-    font-size: 22px;
-}
-#texteregles
-{
-    font-size: 200%;
-}
-#texteapropos
-{
-    font-size: 200%;
 }
 img:hover
 {
