--- a/reset_password.css
+++ b/reset_password.css
@@ -8,59 +8,45 @@ body
 {
     font-family: "Barlow Condensed",arial, helvetica;
     font-size: 200%;
-    color: rgb(64, 172, 172);
+    color: aquamarine;
 }
 #reset_password_email
 {
     font-family: "Barlow Condensed",arial, helvetica;
     font-size: 200%;
-    color :#ffcf00;
+    color :#fff;
 }
-#password
+label
 {
+    margin-top: 100px;
     font-family: "Barlow Condensed",arial, helvetica;
     font-size: 200%;
-    color :#ffcf00;
+    color :#fff;
 }
-#reset_password_email_box
+input
 {
-    text-align: center;
-    font-family: "Barlow Condensed",arial, helvetica;
-    font-size: 200%;
-    border-radius: 50px;
-    width: 40%;
-    border-color: coral;
-    border-style: solid;
-}
-#reset_password_generation
-{
-    margin-top: 3%;
-    text-align: center;
-    font-family: "Barlow Condensed",arial, helvetica;
-    font-size: 200%;
-    border-radius: 50px;
-    width: 40%;
-    border-color: coral;
-    border-style: solid;
-}
-#back_to_login
-{
-    font-family: "Barlow Condensed",arial, helvetica;
-    font-size: 200%;
-    color: #ffcf00;
-}
-button
-{
+    margin-top: 1%;
+    border-radius: 20px;
+    width: 50%;
+    height: 20%;
+    background-color:#fff;
+    color: rgb(97, 97, 97);
     border-color: aquamarine;
-    background-color: #021d20;
-    color: black;
-    font-family: "Barlow Condensed", arial, helvetica;
+    font-family: "Barlow Condensed", arial, Arial, Helvetica;
+    font-size : 200%;
+    align-items: center;
+    transition: all 0.5s ease-out;
+    text-align: center;
 }
-button:hover 
+input:hover 
 {
     border-color: aquamarine;
     background-color: #021d20;
     color: white;
     font-family: "Barlow Condensed", arial, helvetica;
-    
+}
+input:focus
+{
+    border-color: aquamarine;
+    background-color: #021d20;
 }
