--- a/aboutus.css
+++ b/aboutus.css
@@ -2,8 +2,8 @@ body
 {
     text-align: center;
     font-family: "Barlow Condensed",arial, helvetica;
-    color: rgb(64, 172, 172);
-    background-color: rgb(20, 20, 20);
+    color: aquamarine;
+    background-color: #454545;
 }
 img
 {
