--- a/reset_password.css
+++ b/reset_password.css
@@ -1,52 +1,56 @@
 body
 {
-    background-color: #454545;
+    background-color: #F43E43;
+    font-family: "Barlow Condensed", arial, Arial, Helvetica;
     text-align: center;
     margin-top: 10%;
 }
 #register
 {
-    font-family: "Barlow Condensed",arial, helvetica;
     font-size: 200%;
-    color: aquamarine;
+    color: #fff;
 }
-#reset_password_email
+#reset_password_email_box
 {
-    font-family: "Barlow Condensed",arial, helvetica;
-    font-size: 200%;
-    color :#fff;
-}
-label
-{
-    margin-top: 100px;
-    font-family: "Barlow Condensed",arial, helvetica;
-    font-size: 200%;
-    color :#fff;
-}
-input
-{
-    margin-top: 1%;
-    border-radius: 20px;
-    width: 50%;
-    height: 20%;
-    background-color:#fff;
-    color: rgb(97, 97, 97);
-    border-color: aquamarine;
-    font-family: "Barlow Condensed", arial, Arial, Helvetica;
-    font-size : 200%;
-    align-items: center;
-    transition: all 0.5s ease-out;
     text-align: center;
+    margin-top: 1%;
+    font-size: 200%;
+    width: 40%;
+    background-color: #F43E43;
+    color: #fff;
+    border-style: none;
+    border-bottom: solid 2px #C8C8C8
 }
-input:hover 
+#log
 {
-    border-color: aquamarine;
-    background-color: #021d20;
-    color: white;
-    font-family: "Barlow Condensed", arial, helvetica;
+    font-size: 200%;
+    color :#fff;
 }
-input:focus
+#reset_password_generation
 {
-    border-color: aquamarine;
-    background-color: #021d20;
+    margin-top: 5%;
+    border-color: #454545;
+    background-color: #fff;
+    color: #F43E43;
+    transition: all 0.5s ease-out;
+    font-size: 200%;
+    border-radius: 50px;
+    width: 40%;
 }
+#reset_password_generation:hover 
+{
+    border-color: #fff;
+    background-color: #454545;
+    color: #fff;
+    font-size: 200%;
+    border-radius: 50px;
+    width: 40%;
+    cursor: pointer;
+}
+#reset_password_generation:focus
+{
+    border-color: #F43E43;
+    background-color: #454545;
+    color: #fff;
+}
+
