--- a/signup.css
+++ b/signup.css
@@ -1,53 +1,44 @@
 body
 {
-    background-color: #454545;
+    background-color: #C8C8C8;
     text-align: center;
+    align-items: center;
+    font-family: "Barlow Condensed",arial, helvetica;
     margin-top: 10%;
 }
 #create
 {
-    font-family: "Barlow Condensed",arial, helvetica;
     font-size: 500%;
-    color: aquamarine;
-}
-#email
-{
-    font-family: "Barlow Condensed",arial, helvetica;
-    font-size: 200%;
-    color :#fff;
-}
-#password
-{
-    font-family: "Barlow Condensed",arial, helvetica;
-    font-size: 200%;
-    color :#fff;
+    color: #F43E43;
+    font-weight: bold;
 }
 #email_box
 {
     text-align: center;
-    font-family: "Barlow Condensed",arial, helvetica;
     font-size: 200%;
-    border-radius: 50px;
     width: 40%;
-    border-color: aquamarine;
-    border-style: solid;
+    background-color: #C8C8C8;
+    color: #DBDBDB;
+    border-style: none;
+    border-bottom: solid 2px #F43E43
 }
 #password_box
 {
     text-align: center;
-    font-family: "Barlow Condensed",arial, helvetica;
+    margin-top: 1%;
     font-size: 200%;
-    border-radius: 50px;
     width: 40%;
-    border-color: aquamarine;
-    border-style: solid;
+    background-color: #C8C8C8;
+    color: #DBDBDB;
+    border-style: none;
+    border-bottom: solid 2px #F43E43
 }
 #trial
 {
     margin-top: 5%;
-    border-color: aquamarine;
+    border-color: #F43E43;
     background-color: #fff;
-    color: black;
+    color: #454545;
     font-family: "Barlow Condensed", arial, helvetica;
     transition: all 0.5s ease-out;
     font-size: 200%;
@@ -56,8 +47,8 @@ body
 }
 #trial:hover 
 {
-    border-color: aquamarine;
-    background-color: #021d20;
+    border-color: #F43E43;
+    background-color: #454545;
     color: white;
     font-family: "Barlow Condensed", arial, helvetica;
     font-size: 200%;
@@ -66,15 +57,16 @@ body
 }
 #trial:focus
 {
-    border-color: aquamarine;
-    background-color: #021d20;
+    border-color: #F43E43;
+    background-color: #454545;
+    color: #fff;
 }
 #account_already_on
 {
     margin-top: 5%;
-    border-color: aquamarine;
+    border-color: #F43E43;
     background-color: #fff;
-    color: black;
+    color: #454545;
     font-family: "Barlow Condensed", arial, helvetica;
     transition: all 0.5s ease-out;
     font-size: 200%;
@@ -83,8 +75,8 @@ body
 }
 #account_already_on:hover 
 {
-    border-color: aquamarine;
-    background-color: #021d20;
+    border-color: #F43E43;
+    background-color: #454545;
     color: white;
     font-family: "Barlow Condensed", arial, helvetica;
     font-size: 200%;
@@ -93,6 +85,7 @@ body
 }
 #account_already_on:focus
 {
-    border-color: aquamarine;
-    background-color: #021d20;
+    border-color: #F43E43;
+    background-color: #454545;
+    color: #fff;
 }
