--- a/reset_password.css
+++ b/reset_password.css
@@ -15,7 +15,7 @@ body
     text-align: center;
     margin-top: 1%;
     font-size: 200%;
-    width: 40%;
+    width: 70%;
     background-color: #F43E43;
     color: #fff;
     border-style: none;
@@ -23,7 +23,8 @@ body
 }
 #log
 {
-    font-size: 200%;
+    margin-top: 5%;
+    font-size: 170%;
     color :#fff;
 }
 #reset_password_generation
@@ -33,18 +34,18 @@ body
     background-color: #fff;
     color: #F43E43;
     transition: all 0.5s ease-out;
-    font-size: 200%;
+    font-size: 150%;
     border-radius: 50px;
-    width: 40%;
+    width: 80%;
 }
 #reset_password_generation:hover 
 {
     border-color: #fff;
     background-color: #454545;
     color: #fff;
-    font-size: 200%;
+    font-size: 150%;
     border-radius: 50px;
-    width: 40%;
+    width: 80%;
     cursor: pointer;
 }
 #reset_password_generation:focus
