--- a/index.css
+++ b/index.css
@@ -2,25 +2,32 @@ body
 {
     background-color: #F43E43;
     text-align: center;
+    font-family: "Barlow Condensed",arial, helvetica;
 }
 .container 
 {
     display: inline-block;
     position: relative;
+    align-items: center;
 }
-.container .text 
+.image
+{
+    margin-top: 30%;
+    width: 100%;
+}
+/* .container .text 
 {
     z-index: 1;
     position: absolute;
-    text-align: center;
     margin: 0 auto;
     left: 0;
     right: 0;
     top: 70%;
     font-family: "Barlow Condensed",arial, helvetica;
     color: #fff;
-    font-size: 500%;
-    width: 70%;
+    font-size: 400%;
+    width: 100%;
+}
 }
 .text
 {   
@@ -39,7 +46,7 @@ body
     -webkit-background-clip: text;
     -webkit-text-fill-color: #fff;
     transition: all 0.5s ease-in-out;
-    text-shadow: 0 0 5px rgba(255, 255, 255, 0.73);
+    text-shadow: 0 0 20px rgba(2, 2, 2, 0.73);
     cursor: pointer;
 }
   
@@ -53,4 +60,127 @@ body
 .text:hover::before
 {
     width: 100%;
+}
+*/
+
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  border-radius: 50px;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: #454545;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 50px;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #F43E43;
+}
+
+/* Center the image and position the close button */
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 40% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #C8C8C8;
+  width: 80%; /* Could be more or less, depending on screen size */
+  border-radius: 50px;
+}
+
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #F43E43;
+  cursor: pointer;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+  from {-webkit-transform: scale(0)} 
+  to {-webkit-transform: scale(1)}
+}
+  
+@keyframes animatezoom {
+  from {transform: scale(0)} 
+  to {transform: scale(1)}
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
 }
